Updated mime-type and eol-style
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@5746 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- Shareaza Catalan Skin File -->
 
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
