--- a/Languages/default-es.xml
+++ b/Languages/default-es.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- Shareaza Spanish Skin File -->
 <!-- This is the first version to introduce full unicode (UTF-8) encoding -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
