--- a/Languages/default-no.xml
+++ b/Languages/default-no.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Norwegian Skin File based on English CVS v1.76 -->
 
