--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 
 <!-- Shareaza Default Eesti Skin File -->
 <!-- Special characters used in Estonian:
