--- a/Languages/default-hr.xml
+++ b/Languages/default-hr.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Shareaza Default Croatian Skin File -->
 <!-- Body element, don't touch -->
