--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -1952,7 +1952,7 @@
 		<text>This download is waiting for someone to start uploading.
 		Shareaza is ready to start downloading this file, but no-one is sending it at
 		the moment. You are probably waiting in other user's queues, and the download
-		may start transfering at any time. You can examine the individual sources to
+		may start transferring at any time. You can examine the individual sources to
 		see each queue you are waiting in. If you are sharing files yourself, it may
 		improve the chances of a download transfer starting quickly.</text>
 	</document>
@@ -1990,7 +1990,7 @@
 		<newline gap="8"/>
 		<text>The BitTorrent tracker server for this download appears to be
 		down or malfunctioning. Shareaza is unable to contact it to receive
-		a list of downloader peers.</text>
+		a list of peers.</text>
 	</document>
 	<!-- Upload help documents -->
 	<document name="UploadHelp">
@@ -2008,7 +2008,7 @@
 		<newline gap="8"/>
 		<text>You should always attempt to keep a reasonable amount of disk space free. Programs
 		can become unstable if the drives become full, and temporary files may be lost. You should
-		run a disk clean-up, delete unwanted files, or un-install software you no longer need.</text>
+		run a disk clean-up, delete unwanted files, or uninstall software you no longer need.</text>
 	</document>
 	<document name="GeneralHelp.DiskWriteFail">
 		<text format="b">A Required Directory is Non-writable</text>
@@ -2092,14 +2092,14 @@
 		<text>This search does not contain enough terms to function properly. All searches need
 		a minimum number of valid, alphabetic characters to be able to start.</text>
 		<newline gap="8"/>
-		<text>While common file extentions (and numbers) can be searched for, you must enter
+		<text>While common file extensions (and numbers) can be searched for, you must enter
 		other terms as well when creating the search. Punctuation and wildcards are not used
 		in searches, just the text you enter.</text>
 	</document>
 	<document name="SearchHelp.BadSearch3">
 		<text format="b">Please re-phrase the search</text>
 		<newline gap="8"/>
-		<text>This search seems to contain only common file extentions, or no searchable
+		<text>This search seems to contain only common file extensions, or no searchable
 		words.</text>
 		<newline gap="8"/>
 		<text>If you are having trouble creating searches, keep in mind that it's quite similar
@@ -2118,7 +2118,7 @@
 		content, and this has been turned off in the settings. You should either re-phrase the
 		search, or disable the filter.</text>
 		<newline gap="8"/>
-		<text>To disable the filter, go into Tools &gt; Settings &gt; General and un-check the
+		<text>To disable the filter, go into Tools &gt; Settings &gt; General and uncheck the
 		adult content filter.</text>
 	</document>
 	<!-- Share help documents -->
@@ -2255,7 +2255,7 @@
 	<tip id="ID_LIBRARY_COLUMNS" message="Select metadata columns to be displayed..."/>
 	<tip id="ID_LIBRARY_COPY" message="Copy the selected files to another library folder..."/>
 	<tip id="ID_LIBRARY_CREATETORRENT" message="Create a .torrent for this file to upload to a website."/>
-	<tip id="ID_LIBRARY_DELETE" message="Delete the selected files permenantly."/>
+	<tip id="ID_LIBRARY_DELETE" message="Delete the selected files permanently."/>
 	<tip id="ID_LIBRARY_ENQUEUE" message="Add the selected file(s) to your media playlist."/>
 	<tip id="ID_LIBRARY_EXPLORE" message="Open the selected folder(s)."/>
 	<tip id="ID_LIBRARY_EXPORT_COLLECTION" message="Export the selected album folder to collection files..."/>
@@ -2829,8 +2829,8 @@
 	<string id="16386" value="Editing metadata of %i files."/>
 	<string id="16387" value="The file &quot;%s&quot; has not yet been hashed. Please wait for the file to be hashed, and then try again."/>
 	<string id="16388" value="This option uses services provided by Bitzi.com for recognising and sharing information about selected files.\n\nShareaza will transmit the SHA1 hash code for the selected file(s) in order to query the Bitzi database. If you are concerned about privacy, you may wish to consult the Bitzi.com privacy policy.\n\nWould you like to proceed?"/>
-	<string id="16389" value="Are you sure you want to permenantly delete the %i selected file(s) ?\n\nThe files will be moved to your &quot;recycle bin&quot; if it is enabled."/>
-	<string id="16390" value="You have not yet selected a media player to enqueue files with, such as Nullsoft WinAmp. Would you like to select one now?\n\nShareaza will pass the name of the file to your selected program with the &quot;/ADD&quot; argument."/>
+	<string id="16389" value="Are you sure you want to permanently delete the %i selected file(s) ?\n\nThe files will be moved to your &quot;recycle bin&quot; if it is enabled."/>
+	<string id="16390" value="You have not yet selected a media player to enqueue files with, such as Nullsoft Winamp. Would you like to select one now?\n\nShareaza will pass the name of the file to your selected program with the &quot;/ADD&quot; argument."/>
 	<string id="16391" value="You're not connected to the network."/>
 	<string id="16392" value="Click the Connect button to get started."/>
 	<string id="16393" value="The file &quot;%s&quot; failed a hash verification test, and might not be the file you intended to download. Are you sure you want to open it?"/>
@@ -2922,7 +2922,7 @@
 	<string id="16814" value="Please wait: Updating eDonkey server list..."/>
 	<string id="16815" value="UPnP Device Host Service is not running. This service is required to perform the setup.\nYou need to set the startup type of the service to automatic."/>
 	<string id="16816" value="The eDonkey network uses large queues with long wait times. By limiting the maximum queue position you will accept so strictly, you may have trouble getting downloads to begin.\nAre you sure you want to limit what queue positions you will accept?"/>
-	<string id="16817" value="Windows doesn't support filepaths longer than 256 characters.\nPlease select a folder with a shorter path."/>
+	<string id="16817" value="Windows doesn't support paths longer than 256 characters.\nPlease select a folder with a shorter path."/>
 	<string id="16818" value="The complete and incomplete folders should not be the same"/>
 	<string id="16819" value="The incomplete files folder should not be in the library, as it would reduce performance. Incomplete files may be shared directly from the transfers window."/>
 	<string id="16864" value="Querying host discovery services..."/>
@@ -3091,7 +3091,7 @@
 	<string id="18508" value="Dropping download source %s for &quot;%s&quot; because queue position %i is too high."/>
 	<string id="18509" value="You cannot assume this download is complete and reverify it because you do not yet have any partial verification data, such as tiger-tree volume, eDonkey hashset or BitTorrent hashset. Without verification information the download cannot be reverified."/>
 	<string id="18510" value="Are you sure you want to assume this download is complete and reverify it? The whole file will be considered, and Shareaza will accept parts which pass verification and redownload parts which fail verification."/>
-	<string id="18511" value="You have made changes to the filesize. Are you sure you want to change filesize for this download?"/>
+	<string id="18511" value="You have made changes to the file size. Are you sure you want to change file size for this download?"/>
 	<string id="19000" value="Remote access is disabled."/>
 	<string id="19001" value="You must choose a username and password."/>
 	<string id="19002" value="Unable to accept connections, URL unavailable."/>
@@ -3434,7 +3434,7 @@
 		<control/><control/>
 		<control caption="other eDonkey clients."/>
 		<control caption="eDonkey _Tools:"/>
-		<control caption="Download eDonkey serverlist from the web:"/>
+		<control caption="Download eDonkey server list from the web:"/>
 		<control caption="Download..."/>
 	</dialog>
 	<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
@@ -3724,7 +3724,7 @@
 		<control caption="Download"/>
 		<control caption="Cancel"/>
 		<control caption="Shareaza can download files from the web (HTTP), and automatically search and download P2P links (Magnet, Gnutella, eDonkey, mP2P)."/>
-		<control caption="Shareaza can also download BitTorrent files. A torrent can be described by an xyz.torrent file, or a HTTP link to the .torrent file. To download a torrent HTTP link, paste it in the box above. If you already have a .torrent file, click Open Torrent:"/>
+		<control caption="Shareaza can also download BitTorrent files. A torrent can be described by a .torrent file, or a HTTP link to the .torrent file. To download a torrent HTTP link, paste it in the box above. If you already have a .torrent file, click Open Torrent:"/>
 		<control caption="Open _Torrent..."/>
 	</dialog>
 	<dialog name="CNewSearchDlg" cookie="EdCoBuBu" caption="New Search|Search Again|Find in Library">
@@ -4066,7 +4066,7 @@
 		<control caption="Filename and Si_ze:"/>
 		<control caption="Filename:"/>
 		<control/><control/>
-		<control caption="Filesize (Byte):"/>
+		<control caption="File size (Byte):"/>
 		<control/>
 		<control caption="_URNs:"/>
 		<control caption="Trusted"/>
