--- a/Languages/Old/default-cht.xml
+++ b/Languages/Old/default-cht.xml
@@ -2467,8 +2467,8 @@
 	<string id="8064" value="&#36899;&#32218;&#21040; %lu &#33459;&#37168;.  %s &#22312;&#26412;&#22320;&#25910;&#34255;."/>
 	<string id="8065" value="&#36899;&#32218;&#21040;&#32178;&#36335;&#20013;..."/>
 	<string id="8066" value="&#23578;&#26410;&#36899;&#32218;&#21040;&#32178;&#36335;."/>
-	<string id="8067" value="%s &#20837; : %s &#20986; [D:%i/U:%i]"/>
-	<string id="8068" value="[H:%i] %s &#20837; : %s &#20986; [D:%i/U:%i]"/>
+	<string id="8067" value="%s &#20837; : %s &#20986; [D:%I64i/U:%I64i]"/>
+	<string id="8068" value="[H:%I64i] %s &#20837; : %s &#20986; [D:%I64i/U:%I64i]"/>
 	<string id="8069" value="&#36899;&#32218;"/>
 	<string id="8070" value="&#36899;&#32218;&#20013;..."/>
 	<string id="8071" value="&#24050;&#36899;&#32218;"/>
