--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2502,8 +2502,8 @@
 	<string id="8064" value="Соединено с %lu хостом(ами).  %s в собсвенном хранилище."/>
 	<string id="8065" value="Подключаюсь к сети..."/>
 	<string id="8066" value="Нет соединения с сетью."/>
-	<string id="8067" value="%s-Вх. %s-Исх. [З:%i/В:%i]"/>
-	<string id="8068" value="[У:%i] %s-Вх. %s-Исх. [З:%i/В:%i]"/>
+	<string id="8067" value="%s-Вх. %s-Исх. [З:%I64i/В:%I64i]"/>
+	<string id="8068" value="[У:%I64i] %s-Вх. %s-Исх. [З:%I64i/В:%I64i]"/>
 	<string id="8069" value="Соединиться"/>
 	<string id="8070" value="Соединение..."/>
 	<string id="8071" value="Соединены"/>
