--- a/Languages/default-sq.xml
+++ b/Languages/default-sq.xml
@@ -2497,8 +2497,8 @@
 	<string id="8064" value="I Lidhur në %lu hoste.  %s në librarinë lokale."/>
 	<string id="8065" value="Po lidhem në rrjet..."/>
 	<string id="8066" value="Nuk jeni i Lidhur në Rrjet."/>
-	<string id="8067" value="%s brenda : %s jashtë [D:%i/U:%i]"/>
-	<string id="8068" value="[H:%i] %s brenda : %s jashtë [D:%i/U:%i]"/>
+	<string id="8067" value="%s brenda : %s jashtë [D:%I64i/U:%I64i]"/>
+	<string id="8068" value="[H:%I64i] %s brenda : %s jashtë [D:%I64i/U:%I64i]"/>
 	<string id="8069" value="Lidhu"/>
 	<string id="8070" value="Po lidhem..."/>
 	<string id="8071" value="I Lidhur"/>
