--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -2484,8 +2484,8 @@
 	<string id="8064" value="Kapcsolódva %lu szomszéddal.  %s a megosztás mérete."/>
 	<string id="8065" value="Kapcsolódás..."/>
 	<string id="8066" value="Nincs kapcsolat."/>
-	<string id="8067" value="Le: %s | Fel: %s  [D:%i/U:%i]"/>
-	<string id="8068" value="[H:%i]  Le: %s | Fel: %s  [D:%i/U:%i]"/>
+	<string id="8067" value="Le: %s | Fel: %s  [D:%I64i/U:%I64i]"/>
+	<string id="8068" value="[H:%I64i]  Le: %s | Fel: %s  [D:%I64i/U:%I64i]"/>
 	<string id="8069" value="Kapcsolódás"/>
 	<string id="8070" value="Kapcsolódás..."/>
 	<string id="8071" value="Kapcsolódva"/>
