--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2844,6 +2844,7 @@
 	<string id="16409" value="&amp;Экспорт ссылок..."/>
 	<string id="16410" value="Подпапка выбранной папки «%s» уже находится в Вашем хранилище.\nЕсли Вы добавите эту папку, хеши некоторых файлов будут перерасчитанны заново.\n\nУверены, что хотите продолжить?"/>
 	<string id="16411" value="Невозможно переместить файл «%s». Файл, наверное, используется другой программой.\nХотите ли Вы файл скопировать вместо этого?"/>
+	<string id="16412" value="Теневой файл"/>
 	<string id="16448" value="Установлена связь с %s, идет подтверждение связи..."/>
 	<string id="16449" value="Сейчас идет беседа с %s (%s)."/>
 	<string id="16450" value="Соединение с %s закрыто."/>
